app/src/parser/coreth/snapshots/rslib__parser__coreth__native__tests__tx_eth_ui@eth_erc721_safe_transfer_from.json.snap
---
source: app/src/parser/coreth/native.rs
expression: reduced
input_file: app/src/parser/coreth/eth_testvectors/eth_erc721_safe_transfer_from.json
---
[
    "ERC-721": "SafeTransferFrom",
    "From": "0xa11f592be1e49f74187ff3704cda4e41d6c2dc8b",
    "To": "0x6c1a2dc47ed98c097be2b78bad55d775d7e5ebd0",
    "TokenID": "2b8DJYyjGQ2zhxxvz9yHxjsXTzeMfEwZF1cQkP9gchVovdHoJP",
    "Contract": "0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85",
    "Maximun Fee(GWEI)": "593559",
]
