app/src/parser/coreth/snapshots/rslib__parser__coreth__native__tests__tx_eth_ui@eth_erc721_safe_transfer_from_with_data.json.snap
---
source: app/src/parser/coreth/native.rs
expression: reduced
input_file: app/src/parser/coreth/eth_testvectors/eth_erc721_safe_transfer_from_with_data.json
---
[
    "ERC-721": "SafeTransferFrom",
    "From": "0x0565df3f5aad5a45d340b98d1e95f255e238cdc3",
    "To": "0x9ebfb53fa8526906738856848a27cb11b0285c3f",
    "TokenID": "NMqJo4NL4qzUv3Sp5hMn81YyqqFWhxtaR2ZdbatYMiuqvPfwa",
    "Call Data": "0x000000000000000000000000000000...",
    "Contract": "0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85",
    "Maximun Fee(GWEI)": "3080683.965333357",
]
