app/src/parser/coreth/snapshots/rslib__parser__coreth__native__tests__tx_eth_ui@usdt_approve.json.snap
---
source: app/src/parser/coreth/native.rs
expression: reduced
input_file: app/src/parser/coreth/eth_testvectors/usdt_approve.json
---
[
    "ERC-721": "approve",
    "Allow": "0x945de0f44ca827bf03f87a87985bf08669050c73",
    "To Manage": "111111tHGqB74zfBw5NwY6WP9WR8yztRqcZJcvCpNSAchnN",
    "Contract": "0xdac17f958d2ee523a2206206994597c13d831ec7",
    "Maximun Fee(GWEI)": "256874.44874",
]
